# servo-ml

./: .gitignore  AGENTS.md  Cargo.toml  README.md
components/config/: prefs.rs
components/constellation/: Cargo.toml  constellation.rs  event_loop.rs
components/layout/: README.md  formatting_contexts.rs  positioned.rs  query.rs
components/layout/taffy/: layout.rs  mod.rs
components/layout/taffy/stylo_taffy/: convert.rs  mod.rs  wrapper.rs
components/script/: Cargo.toml  README.md  script_thread.rs  task_manager.rs  task_source.rs
components/script/dom/: dissimilaroriginwindow.rs  globalscope.rs  mod.rs  navigator.rs  window.rs  workletglobalscope.rs
components/script/dom/debugger/: debuggerglobalscope.rs
components/script/dom/stream/: README.md
components/script/dom/webnn/: README.md  ml.rs  mlcontext.rs  mlgraph.rs  mlgraphbuilder.rs  mloperand.rs  mltensor.rs  mod.rs  pyrustexample.rs
components/script/dom/workers/: dedicatedworkerglobalscope.rs  serviceworkerglobalscope.rs  workerglobalscope.rs  workernavigator.rs
components/script_bindings/codegen/: Bindings.conf  codegen.py
components/script_bindings/webidls/: WebNN.webidl
components/servo/: Cargo.toml  servo.rs
components/shared/base/: id.rs
components/shared/constellation/: Cargo.toml  from_script_message.rs
components/shared/script/: Cargo.toml  lib.rs
components/shared/webnn/: Cargo.toml
components/shared/webnn/src/: lib.rs
components/webnn/: Cargo.toml  README.md
components/webnn/src/: lib.rs
docs/: index.html
python/tidy/: tidy.py
