[package]
name = "webnn"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "webnn"
path = "src/lib.rs"

[dependencies]
base = { workspace = true }
log = { workspace = true }
webnn_traits = { workspace = true }
rustnn = { git = "https://github.com/rustnn/rustnn", features = ["coreml-runtime"] }
half = "2"

[features]
# Toggle CoreML runtime support (propagates to the rustnn dependency)
coreml-runtime = ["rustnn/coreml-runtime"]
