[package]
name = "webnn"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "webnn"
path = "src/lib.rs"

[dependencies]
base = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
webnn_traits = { workspace = true }
# `rustnn` is always required for graph/data types.  We only enable the
# "coreml-runtime" feature when building for macOS, so callers don’t need to
# pass an extra feature flag.
rustnn = { git = "https://github.com/gterzian/rustnn", features = [] }
half = "2"
profile_traits = { workspace = true }

# used by the manager to communicate with the ML worker thread
crossbeam = "0.8"

# CoreML-specific features are gated purely by the target OS.  The legacy
# `coreml-runtime` workspace feature was removed.

[target.'cfg(target_os = "macos")'.dependencies]
rustnn = { git = "https://github.com/gterzian/rustnn", features = ["coreml-runtime"] }
