[package]
name = "webnn_traits"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"

[lib]
name = "webnn_traits"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
base = { workspace = true }
malloc_size_of = { workspace = true }
malloc_size_of_derive = { workspace = true }
profile_traits = { workspace = true }
rustnn = { git = "https://github.com/gterzian/rustnn" }
